crates/lash/tests/ui/session_turn_stream_requires_scope.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
 --> tests/ui/session_turn_stream_requires_scope.rs:4:10
  |
4 |         .stream(events)
  |          ^^^^^^-------- argument #2 of type `ScopedEffectController<'_>` is missing
  |
note: method defined here
 --> src/turn.rs
  |
  |     pub async fn stream(
  |                  ^^^^^^
help: provide the argument
  |
4 |         .stream(events, /* ScopedEffectController<'_> */)
  |                       ++++++++++++++++++++++++++++++++++
